Fix overflow issue on Images landing page (tile view).  Set image name rather than ID as the tile header.  Added a launch instance button to the image detail page.  Better handling of names input on Launch Instance page.  GUI-195

--- a/koala/static/css/pages/instances.css
+++ b/koala/static/css/pages/instances.css
@@ -17,6 +17,7 @@
 .tile .content { padding: 8px; font-size: 0.9em; }
 .tile .content div { margin-bottom: 2px; margin-left: 28px; }
 .tile .content .label { padding: 1px 3px; margin-left: -28px; background-color: #999999; margin-right: 0.2rem; font-family: Verdana, sans-serif; min-width: 22px; text-align: center; }
+.tile .content .label.ellipsis { margin-left: 0; }
 .tile .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 24px; padding: 4px 4px 4px 10px; color: white; }
 .tile .footer.has-progress { padding: 0 0 0 0; }
 .tile .footer .completed { padding: 4px 0 4px 10px; }
